--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 
- 我如果爱你--
- 绝不像攀援的凌霄花，
- 借你的高枝炫耀自己:
- 我如果爱你--
- 绝不学痴情的鸟儿，
- 为绿荫重复单调的歌曲;
- 也不止像泉源，
- 常年送来清凉的慰籍;
- 也不止像险峰，增加你的高度，衬托你的威仪。
- 甚至日光。
- 甚至春雨。
- 不，这些都还不够!
- 我必须是你近旁的一株木棉，
- 做为树的形象和你站在一起。
- 根，紧握在地下，
- 叶，相触在云里。
- 每一阵风过，
- 我们都互相致意，
- 但没有人
- 听懂我们的言语。
- 你有你的铜枝铁干，
- 像刀，像剑，
- 也像戟，
- 我有我的红硕花朵，
- 像沉重的叹息，
- 又像英勇的火炬，
- 我们分担寒潮、风雷、霹雳;
- 我们共享雾霭流岚、虹霓；
- 仿佛永远分离，
- 却又终身相依，
- 这才是伟大的爱情，
- 坚贞就在这里:
- 不仅爱你伟岸的身躯，
+ 我如果爱你--<br>
+ 绝不像攀援的凌霄花,<br>
+ 借你的高枝炫耀自己:<br>
+ 我如果爱你--<br>
+ 绝不学痴情的鸟儿，<br>
+ 为绿荫重复单调的歌曲;<br>
+ 也不止像泉源，<br>
+ 常年送来清凉的慰籍;<br>
+ 也不止像险峰，增加你的高度，衬托你的威仪。<br>
+ 甚至日光。<br>
+ 甚至春雨。<br>
+ 不，这些都还不够!<br>
+ 我必须是你近旁的一株木棉,<br>
+ 做为树的形象和你站在一起。<br>
+ 根，紧握在地下，<br>
+ 叶，相触在云里。<br>
+ 每一阵风过,<br>
+ 我们都互相致意，<br>
+ 但没有人<br>
+ 听懂我们的言语。<br>
+ 你有你的铜枝铁干，<br>
+ 像刀，像剑，<br>
+ 也像戟，<br>
+ 我有我的红硕花朵，<br>
+ 像沉重的叹息，<br>
+ 又像英勇的火炬，<br>
+ 我们分担寒潮、风雷、霹雳;<br>
+ 我们共享雾霭流岚、虹霓；<br>
+ 仿佛永远分离，<br>
+ 却又终身相依，<br>
+ 这才是伟大的爱情，<br>
+ 坚贞就在这里:<br>
+ 不仅爱你伟岸的身躯，<br>
  也爱你坚持的位置，脚下的土地。
 
